overflow issue fixed

--- a/source/sass/partials/_yes-no.scss
+++ b/source/sass/partials/_yes-no.scss
@@ -63,6 +63,9 @@
   -ms-user-select: none;
   user-select: none;
   margin: 0;
+  max-width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .btn-switch__radio {
   display: none;
